thêm các tính năng mới CRUD cho Courses và Enrollments và thêm CSV import và REST API

--- a/Thực Hành Code First/StudentManagement/Views/Home/Index.cshtml
+++ b/Thực Hành Code First/StudentManagement/Views/Home/Index.cshtml
@@ -79,8 +79,8 @@
                         Quản lý thông tin các khóa học bao gồm mã khóa học, 
                         tên khóa học, mô tả và số tín chỉ.
                     </p>
-                    <a href="#" class="btn btn-success disabled">
-                        <i class="fas fa-arrow-right"></i> Sắp có
+                    <a asp-controller="Courses" asp-action="Index" class="btn btn-success">
+                        <i class="fas fa-arrow-right"></i> Xem chi tiết
                     </a>
                 </div>
             </div>
@@ -94,8 +94,8 @@
                         Quản lý việc đăng ký khóa học của sinh viên, 
                         theo dõi điểm số và trạng thái học tập.
                     </p>
-                    <a href="#" class="btn btn-warning disabled">
-                        <i class="fas fa-arrow-right"></i> Sắp có
+                    <a asp-controller="Enrollments" asp-action="Index" class="btn btn-warning">
+                        <i class="fas fa-arrow-right"></i> Xem chi tiết
                     </a>
                 </div>
             </div>
