--- a/Thực Hành Code First/StudentManagement/Views/Students/Index.cshtml
+++ b/Thực Hành Code First/StudentManagement/Views/Students/Index.cshtml
@@ -25,6 +25,9 @@
                             <a asp-action="ExportCsv" asp-route-search="@Model.Search" class="btn btn-outline-secondary">
                                 <i class="fas fa-file-csv"></i> Xuất CSV
                             </a>
+                            <a asp-action="ImportCsv" class="btn btn-outline-primary">
+                                <i class="fas fa-file-import"></i> Import CSV
+                            </a>
                         </div>
                         <div class="col-md-2 text-end">
                             <button class="btn btn-primary w-100" type="submit"><i class="fas fa-search"></i> Tìm</button>
