--- a/Thực Hành Code First/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/Thực Hành Code First/StudentManagement/Views/Shared/_Layout.cshtml
@@ -28,10 +28,38 @@
                                 <i class="fas fa-home"></i> Trang chủ
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Students" asp-action="Index">
-                                <i class="fas fa-users"></i> Quản lý Sinh viên
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-cogs"></i> Quản lý
                             </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" asp-controller="Students" asp-action="Index">
+                                    <i class="fas fa-users"></i> Sinh viên
+                                </a></li>
+                                <li><a class="dropdown-item" asp-controller="Courses" asp-action="Index">
+                                    <i class="fas fa-book"></i> Khóa học
+                                </a></li>
+                                <li><a class="dropdown-item" asp-controller="Enrollments" asp-action="Index">
+                                    <i class="fas fa-clipboard-list"></i> Đăng ký
+                                </a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" asp-controller="Students" asp-action="ImportCsv">
+                                    <i class="fas fa-file-import"></i> Import CSV
+                                </a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="#" id="apiDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-code"></i> API
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="apiDropdown">
+                                <li><a class="dropdown-item" href="/api/students" target="_blank">
+                                    <i class="fas fa-users"></i> Students API
+                                </a></li>
+                                <li><a class="dropdown-item" href="/swagger" target="_blank">
+                                    <i class="fas fa-book"></i> API Documentation
+                                </a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">
