--- a/Thực Hành Code First/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/Thực Hành Code First/StudentManagement/Views/Shared/_Layout.cshtml
@@ -42,6 +42,12 @@
                                 <li><a class="dropdown-item" asp-controller="Enrollments" asp-action="Index">
                                     <i class="fas fa-clipboard-list"></i> Đăng ký
                                 </a></li>
+                                <li><a class="dropdown-item" asp-controller="Instructors" asp-action="Index">
+                                    <i class="fas fa-chalkboard-teacher"></i> Giảng viên
+                                </a></li>
+                                <li><a class="dropdown-item" asp-controller="ClassSections" asp-action="Index">
+                                    <i class="fas fa-chalkboard"></i> Lớp học phần
+                                </a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" asp-controller="Students" asp-action="ImportCsv">
                                     <i class="fas fa-file-import"></i> Import CSV
